updated the pom file, ParallelWebCrawler.java, and WebCrawlerMain.java

--- a/starter/webcrawler/pom.xml
+++ b/starter/webcrawler/pom.xml
@@ -63,6 +63,7 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -131,5 +132,6 @@
                 </dependencies>
             </plugin>
         </plugins>
+        </pluginManagement>
     </build>
 </project>
